--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         <div id="requestsBox">
                             
                                 <div class="card-body" id="cshow">
-                                        <div id="emptyDivFR" class="emptyDiv" style="background-image: url('../img/noFR.png');"></div>
+                                        <div id="emptyDivFR" class="emptyDiv" style="background-image: url('img/noFR.png');"></div>
                                 </div>
                             
                         </div>
