--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Midterm Project</title>
+    <title>Online Chatroom</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap core CSS -->
